--- a/public/ui/partials/nav.html
+++ b/public/ui/partials/nav.html
@@ -1,4 +1,6 @@
+<div class="notification_wrapper">
 <div id="notification" class="notification_hide"></div>
+</div>
 
 <div id="sidebar-container" ng-class="{'show':sidebar, 'hide':!sidebar}">
 
