--- a/public/ui/partials/policy.html
+++ b/public/ui/partials/policy.html
@@ -115,11 +115,14 @@
         </div>
 
     </div>
+  </div>
+  
+  <div class="question_bottom">
+     <a class="button"><i class="fa fa-bullhorn"></i> 更多</a>
+  </div>
 
-</div>
 
 
-
-</div>
-</div>
-</div>
+</div><!-- wrapper -->
+</div><!-- content -->
+</div><!-- Auth -->
