--- a/public/ui/css/style.css
+++ b/public/ui/css/style.css
@@ -129,9 +129,9 @@ input{
   font-size: 16px;
   font-weight: 700;
 
+  /* used for functional buttons */
   /* padding-right: 60px; */
-  /* This only needed for functional buttons */
-
+  
 }
 .q_function {
   display: none;
@@ -141,6 +141,23 @@ input{
   z-index: 99;
 
 }
+.q_function_sign {
+  position: absolute;
+  right: 30px;
+  font-size: 16px;
+}
+.q_function_signed {
+  color: #009688;
+}
+.q_function_unsigned {
+  color: #E0E0E0;
+}
+@media screen and (max-width: 400px){
+  .q_function_signed {
+    display: none;
+  }
+}
+
 .q_order {
   font-weight: 500;
   width: 20px;
@@ -531,7 +548,7 @@ a.nav_item_sidebar:hover {
   position: absolute;
   width: 100%;
   padding-left: 260px;
-  padding-right: 300px;
+  padding-right: 400px;
   text-decoration: center;
   pointer-events: none;
 }
@@ -859,4 +876,66 @@ a.nav_item_sidebar:hover {
   background: white;
   width: 100px;
 }
+
+/* ------------------------------------------------------------ */
+/* slider
+/* ------------------------------------------------------------ */
+
+.slider_wrap { 
+  position:relative;
+  display: inline-block;
+  margin-top: 18px;
+  margin-right: 30px;
+}
+.slider_wrap input { 
+  position: absolute;
+  opacity: 0;
+}
+.slider {
+  position: relative; 
+  display: block;
+  width: 2.5em; 
+  height: 1em;
+  cursor: pointer;
+  border-radius: 1.5em;
+  transition: 300ms;
+  background: #00695C;
+  
+}
+/* active base */
+input:checked + .slider {
+  background: #ECEFF1;
+  
+}
+/* toggle button */
+.slider::before {
+  position: absolute; 
+  content:'';
+  width: 1.4em; height: 1.4em;
+  top: -0.2em; left: -0.3em;
+  border-radius: 50%;
+  transition: 200ms ease-in-out;
+  background: #26A69A;
+  box-shadow: 0 0 2px rgba(0,0,0,.12),0 2px 4px rgba(0,0,0,.24);
+
+}
+.slider:hover::before {
+  box-shadow: 0 0px 6px rgba(0,0,0,.12),0 4px 6px rgba(0,0,0,.24);
+}
+/* active button */
+.slider::after {
+  position: absolute; 
+  border-radius: 50%;
+  transition: 200ms ease-in;
+}
+input:checked + .slider::before {
+  left: 1.4em;
+  background: white;
+}
+.slider_wrap label, .slider_wrap label::before, .slider_wrap label::after{
+  color: black;
+  z-index: 190;
+
+}
+
 
