--- a/public/ui/partials/rank.html
+++ b/public/ui/partials/rank.html
@@ -1,3 +1,4 @@
+<div ng-controller="AuthCtrl">
 <div ng-include="'partials/nav.html'" ng-controller="NavCtrl"></div>
 
 <!-- LEFT & RIGHT BUTTON -->
@@ -41,7 +42,6 @@
 
 </div>
 
-
-
+</div>
 </div>
 </div>
