--- a/public/ui/partials/index.html
+++ b/public/ui/partials/index.html
@@ -10,13 +10,17 @@
         <div class="index_section">
             <div class="index_content md-whiteframe-z1">
             <div class="index_subsection">
-                <div class="index_title">市長給問嗎！最後一役 政策問答大亂鬥</div>
+                <div class="index_maintitle">
+                   <h1>市長給問嗎！最後一役 政策問答大亂鬥</h1>
+                   <h3>[蘋果 x 沃草 x Google] 共同主辦</h3>
+                </div>
+                
                 <p>選戰進入倒數，問題還沒問完嗎？看了政見有滿腹疑問，想要進一步追問或釐清？覺得政策不可行，想要挑戰候選人？</p>
                 <p>「市長給問嗎！最後一役」，邀請你把所有還來不及說出口的疑問和質疑一次提出，馮光遠、連勝文、柯文哲三位市長候選人將分別於直播節目中回答！</p>
             </div>
             <div class="index_subsection">
                 <div class="index_title">活動說明</div>
-                <p>即日起～各候選人直播節目前一天晚上 23:59 為止，於網站上提問、連署，候選人將依連署票數回答市民提問。</p>
+                <p>即日起～各候選人直播節目前一天晚上 23:59 為止，於網站上提問、連署，候選人將依連署票數高低回答市民提問。</p>
                 <p>提問日期：
                     <ul>
                     <li>馮光遠：即日起～ 11/17 23:59</li>
