--- a/public/ui/partials/index.html
+++ b/public/ui/partials/index.html
@@ -61,12 +61,10 @@
                     <img ng-src="images/candidates/{{c.id}}.jpg">
                     <div class="index_c_item_name">{{c.name}}</div>
                 </div>
-         </div>
-       
+        </div>
+        <div ng-include="'partials/footer.html'"></div>
+    </div><!-- end of warpper -->
 
-                 
-            
-        </div>  
-    </div>
-</div>
-</div>
+</div><!-- end of content -->
+
+</div><!-- end of auth -->
