--- a/public/ui/css/style.css
+++ b/public/ui/css/style.css
@@ -62,6 +62,59 @@ hr {
   height: 1px;
   background: rgb(220,220,220);
 }
+/* ------------------------------------------------------------ */
+/* footer
+/* ------------------------------------------------------------ */
+#footer {
+  margin: 10px 0px;
+  padding: 5px;
+  margin-top: 50px;
+  background: #E0E0E0;
+  width: 100%;
+}
+#footer ul {
+  margin: 0px;
+  padding: 0px;
+  margin-top: 5px;
+}
+.footer_link {
+  text-align: center;
+  margin-bottom: 30px;
+}
+.footer_logo {
+  width: 100%;
+  text-align: center;
+}
+.footer_text {
+  display: inline-block;
+  vertical-align: top;
+  width: 80px;
+  margin: 0px;
+  text-align: center;
+}
+.footer_text a, .footer_text a:visited {
+  
+  color: #757575;
+}
+.footer_img {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0px 10px;
+}
+.footer_img img {
+  width: 100px;
+}
+#footer_apple {
+  padding-bottom: 14px;
+}
+#footer_watchout {
+  width: 110px;
+}
+@media screen and (max-width: 400px){
+  .footer_img {
+    margin: 0px 5px;
+  }
+}
 
 /* ------------------------------------------------------------ */
 /* material test
@@ -769,7 +822,7 @@ a.nav_item_sidebar:hover {
 
 .index_section {
   position: relative;
-  padding-bottom: 100px;
+  padding-bottom: 30px;
 }
 @media screen and (min-width:900px){
   .index_section {
