--- a/public/ui/partials/rank.html
+++ b/public/ui/partials/rank.html
@@ -9,12 +9,10 @@
 <div id="content" ng-click="resetFocus()">
 
 <div class="wrapper">
-
+  <div id="page_content">
   <!--ng-if="shouldShow(q.id)"-->
-  <div class="pa_totalq" >共有 {{(questions | filter:query).length}} 題</div>
-
+  <h3>{{candidate.name}}大亂鬥：共有 {{(questions | filter:query).length}} 題</h3>
   <div ng-repeat="q in questions | filter:query | orderBy: 'signatures_count' : true" ng-class="{'md-whiteframe-z1':showQuestion(q.id),'q_item_active':showQuestion(q.id)}" class="q_item" ng-click="$event.stopPropagation()">
-
     <div class="q_title l_inline" ng-class="{'q_title_active':showQuestion(q.id)}" ng-click="toggleQuestion(q.id)">
       <div class="q_order l_inline">{{$index+1}}</div>
       <div class="q_vote l_inline">{{q.signatures_count | number:0}}</div>
@@ -27,7 +25,6 @@
         </div>
     <!-- ...................... -->
     </div>
-
     <div class="q_content" ng-if="showQuestion(q.id)">
         <div class="q_title_mobile_inner">{{q.title}}</div>
         <p class="q_text" ng-repeat="p in q.content">{{p}}</p>
@@ -37,11 +34,11 @@
             <a class="button"><i class="fa fa-bullhorn"></i> 連署</a>
             <a class="button facebook"><i class="fa fa-facebook"></i> 分享</a>
         </div>
-
     </div>
+  </div><!-- end of q -->
+  </div>
+</div><!-- end of wrapper -->
+<div ng-include="'partials/footer.html'"></div>
+</div><!-- end of conent-->
+</div><!-- end of auth -->
 
-</div>
-
-</div>
-</div>
-</div>
